# fsm-rs

./: .gitignore  CITATION.cff  Cargo.toml  LICENSE  README.md  pyproject.toml
examples/: col_de_porte.py
python/fsm_rs/: __init__.py  wrapper.py
src/: fsm1.rs  lib.rs
