[package]
name = "fsm-rs"
version = "0.1.0"
edition = "2021"
description = "Rust port of Essery's FSM1 (Factorial Snow Model) with Python bindings"
license = "MIT"
readme = "README.md"
repository = "https://github.com/joelfiddes/fsm-rs"
keywords = ["snow", "model", "cryosphere", "geoscience"]

[lib]
name = "_fsm_rs"
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
numpy = "0.22"
ndarray = "0.16"
rayon = "1.10"
